After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 693685 - Crashes when pressing a key in network configuration dialog
Crashes when pressing a key in network configuration dialog
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Network
3.7.x
Other Linux
: Normal critical
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
3.8.1
Depends on:
Blocks:
 
 
Reported: 2013-02-13 00:19 UTC by Mantas Mikulėnas (grawity)
Modified: 2013-03-27 10:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Screenshot (29.56 KB, image/png)
2013-03-26 18:20 UTC, Mantas Mikulėnas (grawity)
Details

Description Mantas Mikulėnas (grawity) 2013-02-13 00:19:38 UTC
When I open the new configuration dialog and press a letter key (this probably triggers the treeview's search mode), control-center crashes.

stderr:

(gnome-control-center:1034087): Gtk-CRITICAL **: gtk_list_store_get_value: assertion `iter_is_valid (iter, list_store)' failed

(gnome-control-center:1034087): GLib-GObject-WARNING **: gtype.c:4226: type id `0' is invalid

(gnome-control-center:1034087): GLib-GObject-WARNING **: can't peek value table for type `<invalid>' which is not currently referenced

backtrace:

  • #0 gtk_tree_model_get_valist
    at gtktreemodel.c line 1765
  • #1 gtk_tree_model_get
    at gtktreemodel.c line 1727
  • #2 selection_changed
    at net-connection-editor.c line 63
  • #3 g_cclosure_marshal_VOID__VOIDv
    at gmarshal.c line 115
  • #4 _g_closure_invoke_va
    at gclosure.c line 840
  • #5 g_signal_emit_valist
    at gsignal.c line 3225
  • #6 g_signal_emit
    at gsignal.c line 3370
  • #7 gtk_tree_selection_unselect_all
    at gtktreeselection.c line 1294
  • #8 gtk_tree_view_search_init
    at gtktreeview.c line 15512
  • #9 gtk_tree_view_real_start_interactive_search
    at gtktreeview.c line 11101
  • #10 gtk_tree_view_key_press
    at gtktreeview.c line 5848
  • #11 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #12 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #13 _g_closure_invoke_va
    at gclosure.c line 840
  • #14 g_signal_emit_valist
    at gsignal.c line 3225
  • #15 g_signal_emit
    at gsignal.c line 3370
  • #16 gtk_widget_event_internal
    at gtkwidget.c line 6400
  • #17 gtk_widget_event
    at gtkwidget.c line 6057
  • #18 gtk_window_propagate_key_event
    at gtkwindow.c line 6012
  • #19 gtk_window_key_press_event
    at gtkwindow.c line 6042
  • #20 _gtk_marshal_BOOLEAN__BOXEDv
    at gtkmarshalers.c line 130
  • #21 g_type_class_meta_marshalv
    at gclosure.c line 997
  • #22 _g_closure_invoke_va
    at gclosure.c line 840
  • #23 g_signal_emit_valist
    at gsignal.c line 3225
  • #24 g_signal_emit
    at gsignal.c line 3370
  • #25 gtk_widget_event_internal
    at gtkwidget.c line 6400
  • #26 gtk_widget_event
    at gtkwidget.c line 6057
  • #27 propagate_event
    at gtkmain.c line 2490
  • #28 gtk_propagate_event
    at gtkmain.c line 2536
  • #29 gtk_main_do_event
    at gtkmain.c line 1716
  • #30 _gdk_event_emit
    at gdkevents.c line 69
  • #31 gdk_event_source_dispatch
    at gdkeventsource.c line 358
  • #32 g_main_dispatch
    at gmain.c line 3048
  • #33 g_main_context_dispatch
    at gmain.c line 3624
  • #34 g_main_context_iterate
    at gmain.c line 3695
  • #35 g_main_context_iteration
    at gmain.c line 3756
  • #36 g_application_run
    at gapplication.c line 1620
  • #37 main
    at control-center.c line 294

Comment 1 Mantas Mikulėnas (grawity) 2013-02-13 00:22:04 UTC
Ah, version: gnome-control-center 3.7.5.1-37-g5ed961f
Comment 2 Bastien Nocera 2013-03-26 17:52:00 UTC
The network panel was rewritten in the meanwhile, so there's no treeviews anymore.
Comment 3 Mantas Mikulėnas (grawity) 2013-03-26 18:20:19 UTC
gnome-control-center 3.7.91 still crashes at the same place. Sorry if the bug report was unclear.
Comment 4 Mantas Mikulėnas (grawity) 2013-03-26 18:20:40 UTC
Created attachment 239887 [details]
Screenshot
Comment 5 Bastien Nocera 2013-03-27 10:29:33 UTC
commit c57faf5da5222cef41ff0bc3480774b4bf18621a
Author: Bastien Nocera <hadess@hadess.net>
Date:   Wed Mar 27 11:24:00 2013 +0100

    network: Fix possible crash in connection editor
    
    Disable the type-ahead search in the connection editor, the
    number of items, and their positional stability means that
    a search feature isn't warranted.
    
    As a precaution, also check the success of
    gtk_tree_selection_get_selected() to avoid crashes.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=693685