network: Fix possible crash in connection editor

Disable the type-ahead search in the connection editor, the
number of items, and their positional stability means that
a search feature isn't warranted.

As a precaution, also check the success of
gtk_tree_selection_get_selected() to avoid crashes.

https://bugzilla.gnome.org/show_bug.cgi?id=693685